--- a/sass/variables/_color.scss
+++ b/sass/variables/_color.scss
@@ -11,3 +11,7 @@ $blogborder:#C9C9C9;
 $cartcolor:#A2A2A2;
 $black:#000000;
 $form-text:#B0B0B0;
+$star-default:#E1E1E1;
+$star-active:#FFAE00;
+$page:#E9E9E9;
+$black:#000000;
