--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,6 +4,7 @@
 @import "../components/category";
 @import "../components/flash";
 @import "../components/selling";
+@import "../components/sell-2";
 @import "../components/testimonial";
 @import "../components/blog";
 @import "../components/footer";
